example of other advanced configuration in spring application