@@ -19,6 +19,8 @@ ext {
     slf4jVersion = "2.0.7"
     logbackVersion = "1.4.8"
     jakartaAnnotationVersion = "2.1.0"
+    lang3Version = "3.12.0"
+    mockitoVersion = "2.0.2-beta"
 }
 
 configure(allprojects) { project ->
@@ -40,6 +42,15 @@ configure(allprojects) { project ->
     compileJava {
         sourceCompatibility = JavaVersion.VERSION_17
         targetCompatibility = JavaVersion.VERSION_17
+    }
+    dependencies {
+        implementation "org.apache.commons:commons-lang3:$lang3Version"
+        implementation "org.junit.jupiter:junit-jupiter:5.9.3"
+    }
+
+    test {
+        useJUnitPlatform()
+        jvmArgs = ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
     }
 }
 
